--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://s.err.ee">
   <link
     href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap"
     rel="stylesheet"
